--- a/README
+++ b/README
@@ -1,3 +1,1 @@
-Teste de performance entre ConvertTo, Parse e TryParse.
-Saiba mais no meu blog.
-http://www.rodrigokono.net/2012/07/02/diferena-entre-int-parse-e-convert-toint/
+Arquivos e projetos Demo utilizados em palestras, posts de blog e testes pessoais.
